--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
+/* :root {
+  --sh-class: #2d5e9d;
+  --sh-identifier: #354150;
+  --sh-sign: #8996a3;
+  --sh-string: #007f7a;
+  --sh-keyword: #e02518;
+  --sh-comment: #a19595;
+  --sh-jsxliterals: #6266d1;
+  --sh-property: #e25a1c;
+  --sh-entity: #e25a1c;
+} */
+
+:root {
+  --sh-class: #2d5e9d;
+  --sh-identifier: #354150;
+  --sh-sign: #8996a3;
+  --sh-string: #007f7a;
+  --sh-keyword: #e02518;
+  --sh-comment: #a19595;
+  --sh-jsxliterals: #6266d1;
+  --sh-property: #e25a1c;
+  --sh-entity: #e25a1c;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --sh-class: #4c97f8;
+    --sh-identifier: white;
+    --sh-keyword: #f47067;
+    --sh-string: #0fa295;
+  }
+  html {
+    color-scheme: dark;
+  }
+}
+
 @layer components {
   .prose .anchor {
     @apply opacity-0 no-underline cursor-pointer ease-in duration-150 inline-block ml-2;
@@ -32,16 +68,48 @@
     @apply font-medium;
   }
 
-  .prose :where(code):not(:where([class~="not-prose"] *))::before {
+  /* .prose :where(code):not(:where([class~="not-prose"] *))::before {
     content: none;
   }
 
   .prose :where(code):not(:where([class~="not-prose"] *))::after {
     content: none;
+  } */
+
+  .prose pre {
+    @apply bg-indigo-2 dark:bg-indigodark-2 rounded-lg overflow-x-auto border border-slate-2 dark:border-indigo-9;
+  }
+
+  .prose code {
+    @apply px-1 py-0.5 rounded-md;
+  }
+
+  .prose pre code {
+    @apply p-0;
+    border: initial;
+    line-height: 1.5;
+  }
+
+  .prose code span {
+    @apply font-medium;
   }
 
   .prose :where(blockquote):not(:where([class~="not-prose"] *)) {
     @apply border-l-4 border-slate-6 dark:border-slatedark-6 rounded-l text-slate-12 dark:text-slatedark-12;
+  }
+
+  .prose
+    :where(code):not(
+      :where([class~="not-prose"], [class~="not-prose"] *)
+    )::before {
+    content: none;
+  }
+
+  .prose
+    :where(code):not(
+      :where([class~="not-prose"], [class~="not-prose"] *)
+    )::after {
+    content: none;
   }
 
   /* Toc */
@@ -69,6 +137,7 @@
     @apply text-indigo-8 dark:text-indigodark-8;
   }
 }
+
 .full-page-toc {
   @apply text-indigo-12 dark:text-indigodarka-12;
 }
@@ -106,67 +175,3 @@
     max-width: 1096px;
   }
 }
-
-/* pretty-code */
-
-div[data-rehype-pretty-code-fragment] {
-  @apply my-6;
-}
-
-div[data-rehype-pretty-code-fragment] > pre {
-  @apply dark:!bg-indigodark-2 !bg-indigo-2;
-}
-
-[data-rehype-pretty-code-fragment] code {
-  @apply grid min-w-full break-words rounded-none border-0 bg-transparent p-0 text-sm;
-  counter-reset: line;
-  box-decoration-break: clone;
-}
-
-[data-rehype-pretty-code-fragment] span[data-line] {
-  @apply border-l-[2px] border-transparent px-4;
-}
-div[data-rehype-pretty-code-fragment] .line--highlighted {
-  @apply dark:bg-slatedark-7/30 dark:border-l-bluedark-8 py-1 bg-slate-7/30 border-l-blue-8;
-}
-
-[data-rehype-pretty-code-fragment]
-  [data-line-numbers]
-  > span[data-line]::before {
-  counter-increment: line;
-  content: counter(line);
-  display: inline-block;
-  width: 1rem;
-  margin-right: 1rem;
-  text-align: right;
-}
-
-[data-rehype-pretty-code-fragment] .line-highlighted span {
-  @apply relative;
-}
-
-[data-rehype-pretty-code-fragment] span[data-highlighted-chars] {
-  @apply rounded-md dark:bg-slatedark-7/30 p-1 bg-slate-7/30;
-}
-
-[data-rehype-pretty-code-title] {
-  @apply px-4 py-3 font-mono text-xs font-medium border-b rounded-t-lg dark:text-slatedark-11 dark:border-indigodark-6 dark:bg-indigodark-2 text-slate-11 border-indigo-6 bg-indigo-2;
-}
-
-[data-rehype-pretty-code-title] + pre {
-  @apply mt-0 rounded-t-none border-t-0;
-}
-
-/* @media (prefers-color-scheme: dark) {
-  pre[data-theme="light"],
-  code[data-theme="light"] {
-    display: none;
-  }
-}
-
-@media (prefers-color-scheme: light), (prefers-color-scheme: no-preference) {
-  pre[data-theme="dark"],
-  code[data-theme="dark"] {
-    display: none;
-  }
-} */
